discussion/kv_engine/187490/187490_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

RangeScan rejig.

Moving the connection IO to frontend.

Currently no one is setting a continue back to idle as the currentStatus
is overloaded

success means new command but should mean go again.
range_scan_more should mean continue done.

Maybe needs cookie.

Change-Id: I17566daa37700a4caaf1f85152a4185929b29cf0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-20 10:10:05.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-20 10:59:19.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52433/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1505): fatal error C1021: invalid preprocessor command "warning" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52433/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43981/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43981/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22970/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ScannedData, std::mutex> scannedData;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:111:28: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
                       cb::engine_errc currentStatus)
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:140:9: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    cb::engine_errc currentStatus{cb::engine_errc::success};
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22970/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:129:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22970/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24622/ : FAILURE

Failure of GoogleTest "ThrottleTest.OpsAreThrottled":

<pre>
[ RUN      ] ThrottleTest.OpsAreThrottled
[2023-03-20T10:36:55.717Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2023-03-20T10:36:55.717Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 1
[2023-03-20T10:36:55.717Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2023-03-20T10:36:55.717Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 1
[2023-03-20T10:36:55.717Z] [  FAILED  ] ThrottleTest.OpsAreThrottled (4166 ms)
ThrottleTest.OpsAreThrottled
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24622/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12783/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12783/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12702/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12702/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1777/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
[2023-03-20T10:28:15.669Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:134: Failure
[2023-03-20T10:28:15.669Z] Expected: (0) != (cb::ArenaMalloc::getPreciseAllocated(engine->getArenaMallocClient(), cb::MemoryDomain::Primary)), actual: 0 vs 0
[2023-03-20T10:28:15.669Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction, where GetParam() = "backend=magma:bucket_type=persistent:item_eviction_policy=full_eviction" (700 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1777/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25499/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25499/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25037/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25037/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26350/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26350/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33452/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">7 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33452/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23245/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
